// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`report.error handles "Array of Errors" signature correctly 1`] = `
Object {
  "context": Object {
    "sourceMessage": "Message 3 from new Error",
  },
  "docsUrl": "https://gatsby.dev/issue-how-to",
  "error": [Error: Message 3 from new Error],
  "level": "ERROR",
  "stack": Any<Array>,
  "text": "Message 3 from new Error",
}
`;

exports[`report.error handles "Error" signature correctly 1`] = `
Object {
  "context": Object {
    "sourceMessage": "Message from new Error",
  },
  "docsUrl": "https://gatsby.dev/issue-how-to",
  "error": [Error: Message from new Error],
  "level": "ERROR",
  "stack": Any<Array>,
  "text": "Message from new Error",
}
`;

exports[`report.error handles "String" signature correctly 1`] = `
Object {
  "context": Object {
    "sourceMessage": "Error created in Jest",
  },
  "docsUrl": "https://gatsby.dev/issue-how-to",
  "level": "ERROR",
  "stack": null,
  "text": "Error created in Jest",
}
`;

exports[`report.error handles "String, Error" signature correctly 1`] = `
Object {
  "context": Object {
    "sourceMessage": "Error string passed to reporter Message from new Error",
  },
  "docsUrl": "https://gatsby.dev/issue-how-to",
  "error": [Error: Message from new Error],
  "level": "ERROR",
  "stack": Any<Array>,
  "text": "Error string passed to reporter Message from new Error",
}
`;

exports[`report.error handles "structuredError" signature correctly 1`] = `
Object {
  "code": "95312",
  "context": Object {
    "ref": "navigator",
  },
  "docsUrl": "https://gatsby.dev/debug-html",
  "level": "ERROR",
  "stack": null,
  "text": "\\"navigator\\" is not available during server side rendering.",
}
`;
